--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                     <div class="product c-6">
                         <div class="product-item">
                             <div class="product-img">
-                                <img src="./asset/img/Đô 1.jpg" alt="Trăm" class="lazy-load">
+                                <img src="./asset/img/Do1.jpg"Trăm" class="lazy-load">
                             </div>
                         </div>
                         <div class="product-info">
@@ -347,7 +347,7 @@
                     <div class="product c-6">
                         <div class="product-item">
                             <div class="product-img">
-                                <img src="./asset/img/Thảo1.jpg" alt="Trăm" class="lazy-load">
+                                <img src="./asset/img/Thao1.jpg" alt="Trăm" class="lazy-load">
                             </div>
                         </div>
                         <div class="product-info">
@@ -366,7 +366,7 @@
                     <div class="product c-6">
                         <div class="product-item">
                             <div class="product-img">
-                                <img src="./asset/img/Trăm1.jpg" alt="Trăm" class="lazy-load">
+                                <img src="./asset/img/Tram.jpg" alt="Trăm" class="lazy-load">
                             </div>
                         </div>
                         <div class="product-info">
@@ -385,7 +385,7 @@
                     <div class="product c-6">
                         <div class="product-item">
                             <div class="product-img">
-                                <img src="./asset/img/Đô 2.jpg" alt="Trăm" class="lazy-load">
+                                <img src="./asset/img/Do2.jpg" alt="Trăm" class="lazy-load">
                             </div>
                         </div>
                         <div class="product-info">
@@ -404,7 +404,7 @@
                     <div class="product c-6">
                         <div class="product-item">
                             <div class="product-img">
-                                <img src="./asset/img/Thảo3.jpg" alt="Trăm" class="lazy-load">
+                                <img src="./asset/img/Thao3.jpg" alt="Trăm" class="lazy-load">
                             </div>
                         </div>
                         <div class="product-info">
@@ -443,7 +443,7 @@
                     <div class="product c-6">
                         <div class="product-item">
                             <div class="product-img">
-                                <img src="./asset/img/Trăm2.jpg" alt="Trăm" class="lazy-load">
+                                <img src="./asset/img/Tram2.jpg" alt="Trăm" class="lazy-load">
                             </div>
                         </div>
                         <div class="product-info">
@@ -462,7 +462,7 @@
                     <div class="product c-6">
                         <div class="product-item">
                             <div class="product-img">
-                                <img src="./asset/img/Thảo2.jpg" alt="Trăm" class="lazy-load">
+                                <img src="./asset/img/Thao2.jpg" alt="Trăm" class="lazy-load">
                             </div>
                         </div>
                         <div class="product-info">
@@ -482,20 +482,20 @@
 
                 <div class="row block__img display-flex ">
                     <div class="col l-6 m-6 c-12">
-                        <img src="./asset/img/1chị22.webp" alt="" class="img__gallery">
+                        <img src="./asset/img/1chi22.webp" alt="" class="img__gallery">
                     </div>
                     <div class="col l-6 m-6  c-12">
                         <div class="row pb12 display-flex ">
                             <div class="col l-6 m-6 c-6">
-                                <img src="./asset/img/Dángnam.webp" alt="" class="block__img-top">
+                                <img src="./asset/img/Dangnam.webp" alt="" class="block__img-top">
                             </div>
                             <div class="col l-6 m-6  c-6">
-                                <img src="./asset/img/Dángnữ.webp" alt="" class="block__img-top">
+                                <img src="./asset/img/Dangnu.webp" alt="" class="block__img-top">
                             </div>
                         </div>
                         <div class="row c-12  ">
                             <div class="col">
-                                <img src="./asset/img/chíale.webp" alt="" class="block__img-bot">
+                                <img src="./asset/img/chisale.webp" alt="" class="block__img-bot">
                             </div>
                         </div>
                     </div>
@@ -551,7 +551,7 @@
                     <div class="news_container">
                         <div class="row display-flex display-block ">
                             <div class="col l-6 mb20 ">
-                                <img src="./asset/img/váy ngủ.jpeg" alt="" class="news__img1 c-12">
+                                <img src="./asset/img/vayngu.jpeg" alt="" class="news__img1 c-12">
                                 <p class="news_subheading mt10 ">15/08/2021 - bởi: Ego Creative</p>
                                 <a href="https://ego-wear.mysapo.net/mau-tay-andrea-chuong-vay-ngu-xuyen-thau" class="news_heading">Mẫu Tây Andrea chuộng váy ngủ xuyên thấu</a>
                                 <div class="news_desc ">Andrea Aybar là người mẫu gốc Tây Ba Nha. Nhưng từ khi còn rất nhỏ, cô đã cùng gia đình chuyển tới Việt Nam sinh sống và làm việc. Vì thế, Việt Nam được coi như là quê hương thứ</div>
@@ -560,7 +560,7 @@
                                 <div class="col">
                                     <div class="news_first">
                                         <div class="col l-6 m-3 ">
-                                            <img src="./asset/img/báo1.jpeg" alt="" class="news__img1 display-none">
+                                            <img src="./asset/img/bao1.jpeg" alt="" class="news__img1 display-none">
                                         </div>
                                         <div class="col l-6 m-9 ml40">
                                             <div class="news_para">
@@ -574,7 +574,7 @@
                                     </div>
                                     <div class="news_first">
                                         <div class="col l-6 m-3">
-                                            <img src="./asset/img/báo2.jpeg" alt="" class="news__img1 display-none">
+                                            <img src="./asset/img/bao2.jpeg" alt="" class="news__img1 display-none">
                                         </div>
                                         <div class="col l-6 m-9 ml40">
                                             <div class="news_para">
@@ -588,7 +588,7 @@
                                     </div>
                                     <div class="news_first">
                                         <div class="col l-6 m-3">
-                                            <img src="./asset/img/báo3.jpeg" alt="" class="news__img1 display-none">
+                                            <img src="./asset/img/bao3.jpeg" alt="" class="news__img1 display-none">
                                         </div>
                                         <div class="col l-6 m-9 ml40">
                                             <div class="news_para">
