--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
         <link rel="stylesheet" href="./asset/css/main.css">
         <link rel="stylesheet" href="./asset/css/fontawesome-free-5.15.4-web/css/all.min.css">
         <link rel="stylesheet" href="./asset/css/GS 2/responsive.css">
+        <link rel="stylesheet" href="./asset/css/hover-min.css">
     </head>
     <body>
         <div id="wrapper">
-<!-- bbbb -->
-<!-- â -->
             <div id="header">
                 <div class="header__logo">
                     <img src="//bizweb.dktcdn.net/100/434/926/themes/839444/assets/logo.png?1636683799302" alt="LOGO" class="header__logo-img">
@@ -79,16 +78,16 @@
                 </div>
 
                 <div class="user">
-                    <div class="user__item col-3per display-none ">
+                    <div class="user__item hvr-underline-from-center col-3per display-none ">
                         <i class="far fa-user user__icon" style="user-select: auto;"></i>
                         <div class="user__form">Đăng nhập</div>
                     </div>
-                    <div class="user__item col-3per ">
+                    <div class="user__item hvr-underline-from-center col-3per ">
                         <div class="quanlity">0</div>
                         <i class="far fa-heart user__icon" style="user-select: auto;"></i>
                         <div class="user__form">Yêu thích</div>
                     </div>
-                    <div class="user__item col-3per ">
+                    <div class="user__item hvr-underline-from-center col-3per ">
                         <div class="quanlity">0</div>
                         <i class="fas fa-shopping-cart user__icon" style="user-select: auto;"></i>
                         <div class="user__form">
@@ -257,7 +256,9 @@
 
             </div>
 
-            <img src="./asset/img/slider_1.jpeg" alt="MODEL" class="img-model">
+            <div class="div">
+                <img src="./asset/img/slider_1.jpeg" alt="MODEL" class="img-model">
+            </div>
 
             <div class="customer">
                 <div class="customer__item-tablet display-flex ">
@@ -265,11 +266,11 @@
                         <div class="customer__item-icon">
                             <i class="fas fa-truck customer__item-icon-truck"></i>
                         </div>
-                        <div class="customer_item-trade">
-                            <h4 class="customer_item-trade-heading">
+                        <div class="customer_item-trade " >
+                            <h4  class="customer_item-trade-heading">
                                 Miễn phí giao hàng
                             </h4>
-                            <h6 class="customer_item-trade-subheading">
+                            <h6  class="customer_item-trade-subheading">
                                 Miễn phí ship với đơn hàng > 498K
                             </h6>
                         </div>
@@ -278,11 +279,11 @@
                         <div class="customer__item-icon">
                             <i class="fab fa-paypal customer__item-icon-truck"></i>
                         </div>
-                        <div class="customer_item-trade">
-                            <h4 class="customer_item-trade-heading">
+                        <div  class="customer_item-trade">
+                            <h4  class="customer_item-trade-heading">
                                 Thanh toán bằng paypal
                             </h4>
-                            <h6 class="customer_item-trade-subheading">
+                            <h6  class="customer_item-trade-subheading">
                                 Thanh toán khi nhận hàng
                             </h6>
                         </div>
@@ -326,159 +327,6 @@
                 </h1>
 
                 <div class="container__product">
-                    <div class="product c-6">
-                        <div class="product-item">
-                            <div class="product-img">
-                                <img src="./asset/img/Do1.jpg"Trăm" class="lazy-load">
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="brand">EGO WEAR</span>
-                            <h3 class="product-name">Áo sơ mi, siêu sạch siêu ngon. Đặc biệt không bán!!</h3>
-                            <div class="product-cart--price">
-                                <div class="product-price">
-                                    480.000đ
-                                </div>
-                                <div class="product-cart">
-                                    Mua ngay
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product c-6">
-                        <div class="product-item">
-                            <div class="product-img">
-                                <img src="./asset/img/Thao1.jpg" alt="Trăm" class="lazy-load">
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="brand">EGO WEAR</span>
-                            <h3 class="product-name">Đồ ngủ có hòi con vinh đến từ Chợ Đồng Xuân</h3>
-                            <div class="product-cart--price">
-                                <div class="product-price">
-                                    167.000đ
-                                </div>
-                                <div class="product-cart">
-                                    Mua ngay
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product c-6">
-                        <div class="product-item">
-                            <div class="product-img">
-                                <img src="./asset/img/Tram.jpg" alt="Trăm" class="lazy-load">
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="brand">EGO WEAR</span>
-                            <h3 class="product-name">Quần phông và áo jean</h3>
-                            <div class="product-cart--price">
-                                <div class="product-price">
-                                    280.000đ
-                                </div>
-                                <div class="product-cart">
-                                    Mua ngay
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product c-6">
-                        <div class="product-item">
-                            <div class="product-img">
-                                <img src="./asset/img/Do2.jpg" alt="Trăm" class="lazy-load">
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="brand">EGO WEAR</span>
-                            <h3 class="product-name">Combo áo jead, nón bảo hiểm. Outfit đỉnh cao năm 2017</h3>
-                            <div class="product-cart--price">
-                                <div class="product-price">
-                                    1.480.000đ
-                                </div>
-                                <div class="product-cart">
-                                    Mua ngay
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product c-6">
-                        <div class="product-item">
-                            <div class="product-img">
-                                <img src="./asset/img/Thao3.jpg" alt="Trăm" class="lazy-load">
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="brand">EGO WEAR</span>
-                            <h3 class="product-name">Áo khoác chống nóng mùa đông</h3>
-                            <div class="product-cart--price">
-                                <div class="product-price">
-                                    320.000đ
-                                </div>
-                                <div class="product-cart">
-                                    Mua ngay
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product c-6">
-                        <div class="product-item">
-                            <div class="product-img">
-                                <img src="./asset/img/Mai.jpg" alt="Trăm" class="lazy-load">
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="brand">EGO WEAR</span>
-                            <h3 class="product-name">
-                                Mua nhanh đi, hết salde đừng có khóc à</h3>
-                            <div class="product-cart--price">
-                                <div class="product-price">
-                                    210.000đ
-                                </div>
-                                <div class="product-cart">
-                                    Mua ngay
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product c-6">
-                        <div class="product-item">
-                            <div class="product-img">
-                                <img src="./asset/img/Tram2.jpg" alt="Trăm" class="lazy-load">
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="brand">EGO WEAR</span>
-                            <h3 class="product-name">Áo sơ mi, siêu sạch siêu ngon. Đặc biệt không bán!!</h3>
-                            <div class="product-cart--price">
-                                <div class="product-price">
-                                    480.000đ
-                                </div>
-                                <div class="product-cart">
-                                    Mua ngay
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="product c-6">
-                        <div class="product-item">
-                            <div class="product-img">
-                                <img src="./asset/img/Thao2.jpg" alt="Trăm" class="lazy-load">
-                            </div>
-                        </div>
-                        <div class="product-info">
-                            <span class="brand">EGO WEAR</span>
-                            <h3 class="product-name">Combo áo sơ cụt tay + quần jean, duy nhất mỗi hôm</h3>
-                            <div class="product-cart--price">
-                                <div class="product-price">
-                                    720.000đ
-                                </div>
-                                <div class="product-cart">
-                                    Mua ngay
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
 
                 <div class="row block__img display-flex ">
@@ -609,7 +457,7 @@
             </div>
 
             <div id="footer">
-                <div class="row display-flex  mt20">
+                <div class="row display-flex   mt20">
                     <div class="col l-3 c-12  ">
                         <div class="footer_heading">
                             CHÚNG TÔI LÀ AI ?
@@ -637,7 +485,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col l-9 c-12">
+                    <div class="col ml15 l-9 c-12">
                         <div class="row display-flex ">
                             <div class="col l-3 c-4  ">
                                 <div class="footer_heading">
@@ -697,5 +545,10 @@
                 </div>
             </div>
         </div>
+        
     </body>
-</html></div></body></html>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
+    <script type="module" src="./src/main.js"></script>
+</html>
